[project]
name = "drgn"
version = "0.1.10"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shikotei", email = "56791111+ShikoteiCoding@users.noreply.github.com" }
]
requires-python = ">=3.12.1"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
